--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "superagent": "^5.2.2",
+    "vue": "^2.6.12",
     "xml2js": "^0.4.23"
   }
 }
